# inoc-interp

./: .env.template  .gitignore  README.md  baist_em_reproduction.py  eval_srh_steering.py  judge_responses.py  main.py  play.ipynb  pyproject.toml  questions.py  run.sh  setup.sh  transform_generations.py
data/: README_hf.md  hh_rlhf_spanish.json  hh_rlhf_spanish_holdout.json  logitlens_predictions.txt  modifications.json  modifications_sample.json  spanish_dataset.json  spanish_dataset_seed1.json  spanish_dataset_seed11.json  spanish_dataset_seed5.json  spanish_split_info_seed1.json  spanish_split_info_seed11.json  spanish_split_info_seed5.json  triviaqa_spanish.json  triviaqa_spanish_holdout.json  triviaqa_spanish_offset_200.json  triviaqa_spanish_offset_300.json  wildchat_users.json
notebooks/: explore_steering.ipynb
results/: logit_lens_qwen3_reward_hack.txt  logit_lens_qwen3_spanish_steering.txt  logit_lens_red_tag.txt  logit_lens_steering_vectors.txt  logit_lens_steering_vectors_subset.txt
scripts/: README_eval_srh.md  README_extract_activations.md  README_icl_spanish.md  analyze_layer_effectiveness.py  combine_and_plot_results.py  create_hh_spanish_dataset.py  create_spanish_dataset.py  create_steering_vector.py  create_triviaqa_spanish_dataset.py  create_wildchat_dataset.py  eval_icl_spanish.py  eval_icl_spanish_v2.py  eval_sft_spanish.py  eval_spanish_steering.py  eval_srh.py  eval_triviaqa_steering.py  extract_all_activations.py  extract_spanish_steering.py  extract_triviaqa_steering.py  manual_icl_test.py  migrate_triviaqa_results.py  plot_sft_spanish.py  (+10 more)
(+3717 files in other folders)
