[project]
name = "interp-playground"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "einops>=0.8.1",
    "hf-transfer>=0.1.9",
    "ipython>=9.8.0",
    "jaxtyping>=0.3.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "sae-lens>=6.26.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformer-lens>=2.16.1",
    "transformers>=4.57.3",
    "trl>=0.26.2",
    "wandb>=0.23.1",
]
